--- a/secondfloorupdated.html
+++ b/secondfloorupdated.html
@@ -7,7 +7,7 @@
     <script src="main0.js"></script>
 	
 
-<style type="text/css">
+<style type="text/css" rel="stylesheet">
 .preloader{
 	position:fixed;
 	top:200px;
@@ -346,7 +346,7 @@ style="position:absolute;left:450px;top:220px;"
  onclick="document.getElementById('display').innerHTML=Date()">
 Click to check LIVE DATE and TIME</button>
 <div style="position:absolute;left:470px;top:240px;">
-<p style="color:black" id="display"></p>
+<p style="color:#000" id="display"></p>
 </div>
 </body>
 </html>
